tests/baselines/reference/callSignaturesWithOptionalParameters2.errors.txt
callSignaturesWithOptionalParameters2.ts(26,1): error TS2454: Variable 'c' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(27,1): error TS2454: Variable 'c' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(29,1): error TS2454: Variable 'c' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(30,1): error TS2454: Variable 'c' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(40,1): error TS2454: Variable 'i' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(41,1): error TS2454: Variable 'i' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(42,1): error TS2454: Variable 'i' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(43,1): error TS2454: Variable 'i' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(44,1): error TS2454: Variable 'i' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(45,1): error TS2454: Variable 'i' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(54,1): error TS2454: Variable 'a' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(55,1): error TS2454: Variable 'a' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(56,1): error TS2454: Variable 'a' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(57,1): error TS2454: Variable 'a' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(58,1): error TS2454: Variable 'a' is used before being assigned.
callSignaturesWithOptionalParameters2.ts(59,1): error TS2454: Variable 'a' is used before being assigned.


==== callSignaturesWithOptionalParameters2.ts (16 errors) ====
    // Optional parameters should be valid in all the below casts
    
    function foo(x?: number);
    function foo(x?: number) { }
    
    foo(1);
    foo();
    
    function foo2(x: number);
    function foo2(x: number, y?: number);
    function foo2(x: number, y?: number) { }
    
    foo2(1);
    foo2(1, 2);
    
    class C {
        foo(x?: number);
        foo(x?: number) { }
    
        foo2(x: number);
        foo2(x: number, y?: number);
        foo2(x: number, y?: number) { }
    }
    
    var c: C;
    c.foo();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.foo(1);
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    c.foo2(1);
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.foo2(1, 2);
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        (x?: number);
        (x?: number, y?: number);
        foo(x: number, y?: number);
        foo(x: number, y?: number, z?: number);
    }
    
    var i: I;
    i();
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i(1);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i(1, 2);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i.foo(1);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i.foo(1, 2);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i.foo(1, 2, 3);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        (x?: number);
        (x?: number, y?: number);
        foo(x: number, y?: number);
        foo(x: number, y?: number, z?: number);
    }
    
    a();
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a(1);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a(1, 2);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a.foo(1);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a.foo(1, 2);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a.foo(1, 2, 3);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.